## API OVERHAUL * Clean up main API instance by adding the banks api and moving clan related getters to the ClanManager * Added full inheritance hierarchy to both clan and associate objects (InvasiveEntity.java) * Moved all relational methods from clan object into dedicated object (Relation.java) * Clan associate now inherits the same interface as clan (InvasiveEntity) making for a full circle interfacing resolution. * Renamed all events to category dependent prefixing. * Added and finished new LogoHolder interface for entities that can contain personal holograms of their designed Insignia's (InvasiveEntity) * Narrowed down all task logic to new thread safe concurrent timer. (AsynchronousLoanableTask) * Following the creation of the new timer is the TimerEvent that is run for both possible runtimes. * Added event parent abstraction ClanEvent (Parent of all clan events) * Added event parent abstraction PlayerEvent (Parent of all player related events) * Added event parent abstraction WarEvent (Parent of all war related events) * Added event parent abstraction AssociateEvent (Parent of all associate related events) * Added event parent abstraction ClaimEvent (Parent of all claim related events) * Added new event AssociateChangeBrushColorEvent for when an associate goes to change their insignia brush color * Added new event AssociateDisplayInfoEvent for when a player OR associate views a clans information * Added new event AssociateRankManagementEvent for when an associate gets demoted/promoted * Added new event AssociateTeleportEvent for when an associate gets teleported. * Added new event ClanCooldownCompleteEvent for when a cooldown for a clan expires. * Added new event AssociateKickAssociateEvent for when a clan associate kicks another associate * Added new event ClanKickAssociateEvent for when an associate gets removed from a clan. * Added new event ClanOverpowerClaimEvent for when a clan overpowers another clans claim. * Added new event InsigniaBuildCarrierEvent 